tests/ui/consts/rustc-impl-const-stability.stderr
error: const `impl` for trait `Debug` which is not `const`
  --> $DIR/rustc-impl-const-stability.rs:15:12
   |
LL | impl const std::fmt::Debug for Data {
   |            ^^^^^^^^^^^^^^^ this trait is not `const`
   |
   = note: marking a trait with `const` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 1 previous error

